# XCpp

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: CppHeaderTool.cmake  XCppCodeGenerator.cmake
src/: CMakeLists.txt
src/AngelScript/: CMakeLists.txt
src/App/: App.cpp  App.h  CMakeLists.txt
src/Core/: CMakeLists.txt  CoreFwd.h  Decl.h  DeclFwd.h  DeclManager.cpp  DeclManager.h  DeclTemplate.h  DeclUnorderedMap.h  DeclVector.h  Fwd.h  GlobalVariable.cpp  Object.h  ScriptManager.cpp  ScriptManager.h
src/ImGui/: CMakeLists.txt  ImGuiLayer.h
src/Launcher/: CMakeLists.txt  Launcher.cpp
src/Renderer/: Buffer.h  CMakeLists.txt  ImGuiLayer.cpp  ImGuiLayer.h  Mesh.h  RHIObject.h  Renderer.cpp  Renderer.h  Resource.h  Shader.h  Texture.h  Utils.cpp  Utils.h
src/Renderer/OpenGL/: GLImGuiLayer.cpp  GLImGuiLayer.h  GLRenderer.cpp  GLRenderer.h  GLShader.h  GLUtils.cpp  GLUtils.h
src/Renderer/Vulkan/: VKImGuiLayer.cpp  VKImGuiLayer.h  VKRenderer.cpp  VKRenderer.h  VKShader.h  VKUtils.cpp  VKUtils.h
